# docsMakerBackend

./: .env  .gitignore  DATE_FORMAT_EXAMPLES.md  Dockerfile  Dockerfile.beat  Dockerfile.cdn  Dockerfile.pgbouncer  Dockerfile.worker  Dockerfile.ws  Procfile  SVG_PARSER_CONVENTIONS.md  SVG_PARSER_CONVENTIONS.txt  ai_test_report.json  check_db.py  cleanup_db.py  cookies.txt  create_dummy_users.py  db.sqlite3  debug_font_injection_detailed.py  debug_stream.py  docker-entrypoint.sh  fix_svg_paths.py  import_templates.py  install_playwright.sh  nginx.cdn.conf  pyproject.toml  reproduce_svg_issue.py  requirements.txt  start_daphne.sh  test_ai_chat.py  test_django_model.py  test_removebg.py  test_results.txt  test_sharp_guy_intelligence.py  test_source_logging.py  test_svg_compression.py  test_svg_parser.py
accounts/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
analytics/: admin.py  consumers.py  middleware.py  models.py  redis_tracking.py  routing.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
api/: admin.py  apps.py  cache_utils.py  cairosvg_font_handler.py  font_injector.py  font_installer.py  models.py  permissions.py  playwright_renderer.py  response_optimizer.py  serializers.py  signals.py  svg_optimizer.py  svg_parser.py  svg_sync.py  svg_updater.py  svg_utils.py  svg_validator.py  test_font_injector.py  test_select_logic.py  test_svg_validator.py  tests.py  urls.py  utils.py  views.py  views_admin.py  watermark.py  weasyprint_renderer.py
scratch/: create_template.py  (+1 more)
(+140 files in other folders)
